adl-frontend/src/test/resources/unit/unsupported/error/semantic/attributes/attr5.adl
// attribute: integer assigned to string
primitive attributes.attr5 {
  @SemanticError(GroupId="ATTR", ErrorId="ILLEGAL_CAST_TO_STRING")
  attribute string attr = 2;
}
